--- a/src/routes/number/components/number-add/index.marko
+++ b/src/routes/number/components/number-add/index.marko
@@ -7,4 +7,8 @@
     <input id="3" type="text" />
     <input id="4" type="text" />
     <input type="submit" value="join" on-click('showAnswer') />
-    <input type="submit" value="show-data" on-click('increment')> ${state.demo} </div>
+    <input type="submit" value="show-data" on-click('increment')> ${state.demo} </div><br>
+<button type="button" on-click('mydatefunction')>Click me to display Date and Time.</button><br>
+
+<button type="button" on-click('addfunction')>add</button>
+<p id="try"></p>
