--- a/src/routes/number/components/number-add/index.marko
+++ b/src/routes/number/components/number-add/index.marko
@@ -10,5 +10,5 @@
     <input type="submit" value="show-data" on-click('increment')> ${state.demo} </div><br>
 <button type="button" on-click('mydatefunction')>Click me to display Date and Time.</button><br>
 
-<button type="button" on-click('addfunction')>add</button>
+<button type="button" on-click('addfunction')>multiply</button>
 <p id="try"></p>
