new function add.

--- a/src/routes/number/components/number-add/index.marko
+++ b/src/routes/number/components/number-add/index.marko
@@ -11,4 +11,5 @@
 <button type="button" on-click('mydatefunction')>Click me to display Date and Time.</button><br>
 
 <button type="button" on-click('addfunction')>multiply</button>
-<p id="try"></p>
+<p id="try"></p><br>
+<p id="test"></p>
