new button create.

--- a/src/routes/number/components/number-add/index.marko
+++ b/src/routes/number/components/number-add/index.marko
@@ -13,3 +13,4 @@
 <button type="button" on-click('addfunction')>multiply</button>
 <p id="try"></p><br>
 <p id="test"></p>
+<button type="button" on-click('arithmeticfunction')></button>
